@@ -17,7 +17,7 @@
  * Boston, MA  02111-1307, USA.
  */
 
-
+#include <memory.h>
 #include "server.h"
 
 
